lib/libui/bottom_pane/chat_composer/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap
---
source: bin/console/src/bottom_pane/chat_composer/chat_composer_tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Chaos to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  esc esc to edit previous message                                                                  "
