lib/libui/bottom_pane/chat_composer/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: bin/console/src/bottom_pane/chat_composer/chat_composer_tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Chaos to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                             ! for shell commands                                   "
"  shift + enter for newline                  tab to queue message                                   "
"  @ for file paths                           ctrl + v to paste images                               "
"  ctrl + g to edit in external editor        esc again to edit previous message                     "
"  ctrl + c to exit                                                                                  "
"  ctrl + t to view transcript                                                                       "
